# HearthStone-Emu

./: DEV  README  configure.ac
extras/VindaireIRCBot/: VindaireVC9.sln  VindaireVC9.vcproj  vindaire.conf
extras/VindaireIRCBot/src/: Common.h  Config.cpp  Config.h  Field.h  IRCSession.cpp  IRCSession.h  Log.h  MersenneTwister.cpp  MessageHandler.cpp  MySQLConnection.cpp  Replies.h  (+9 more)
extras/buildbot/: build_hs.bat  build_hs_x64.bat
extras/docs/: AccountFlags.txt  Accounts Database Changes.txt  Compiling.txt  EncryptedPasswords.txt  Modifying the Maximum Level.txt
sql/: 1008_AccountTemplate.sql  1008_CharacterTemplate.sql  1008_WorldTemplate.sql  WowScript_full.sql  WowScript_illidan_stormrage_encounter.sql
sql/Quest_Updates/: 1.sql
sql/character_updates/: 1256_characters.sql  1269_guilds.sql  1304_dualspec.sql  1375_mailbox.sql  1440_groups.sql  572_character_available_pvp_titles.sql  593_characters.sql  803_PrestartQuery.sql  862_playerskills.sql
sql/converters/: arc2wowemu.sql  core2hearthstone563_characters.sql  core2hearthstone563_world.sql  logon.characters.sql  ncdb2hearthstone.sql
sql/logon_updates/: 1009_accounts.sql  3_accounts.sql  877_accounts.sql
sql/world_updates/: 1007_creature_proto.sql  1118_Creature_Waypoints.sql  1135_Loot_Indexes.sql  1176_reputation_instance_onkill.sql  1237_AIAgents.sql  1353_inscriptiondiscoveries.sql  1354_random.sql  1393_spellfixes.sql  1396_randomcreation.sql  1403_randomcreation.sql  1409_spellfixes.sql  1450_scrollcreation.sql  1503_spellfixes.sql  569_totemspells.sql  570_achievement_rewards.sql  571_creature_proto.sql  626_phasing.sql  637_phase.sql  655_quests.sql  756_creature_waypoints.sql  757_creature_spawns.sql  758_ai_agents.sql  758_ai_agents_enum.sql  803_PrestartQuery.sql  818_quests.sql  819_creature_proto.sql  854_creature_proto_canmove.sql  867_Item_Quest_Relation.sql  960_Profession_Discoveries.sql  990_Item_fieldrename.sql
src/: wowemu-logonserver.conf  wowemu-world.conf
src/hearthstone-logonserver/: Main.cpp
src/hearthstone-realmserver/: WorldSocket.cpp
src/hearthstone-shared/: Common.h  Makefile.am  SharedPtr.h  Storage.h
src/hearthstone-world/: AIInterface.cpp  AIInterface.h  AchievementInterface.cpp  AddonMgr.cpp  AddonMgr.h  AreaTrigger.cpp  AuctionHouse.cpp  BattlegroundHandler.cpp  BattlegroundMgr.cpp  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  CombatHandler.cpp  ConsoleCommands.cpp  Creature.cpp  Creature.h  DuelHandler.cpp  DynamicObject.cpp  GameObject.cpp  GameObject.h  Group.cpp  GroupHandler.cpp  Guild.cpp  GuildHandler.cpp  HonorHandler.cpp  Item.cpp  ItemHandler.cpp  ItemInterface.cpp  Level1.cpp  Level2.cpp  Level3.cpp  LfgMgr.h  LogonCommClient.cpp  MailSystem.cpp  MapMgr.cpp  MapMgr.h  Master.cpp  MiscHandler.cpp  MovementHandler.cpp  (+45 more)
src/scripts/: linux_installer.sh  scripts2008.sln
src/scripts/src/EventScripts/: Halloween.cpp  Makefile.am  Setup.cpp  Setup.h  WinterVeil.cpp
src/scripts/src/GossipScripts/: Gossip_Battlemaster.cpp  Gossip_BoreanTundra.cpp  Gossip_DarkmoonFaire.cpp  Gossip_Guard.cpp  Gossip_Innkeepers.cpp  Gossip_Moonglade.cpp  Gossip_Mulgore.cpp  Gossip_Shattrath.cpp  Gossip_Stormwind.cpp  Gossip_Tanaris.cpp  Gossip_Teldrassil.cpp  Gossip_Theramore.cpp  Gossip_Trainer.cpp  Gossip_WyrmrestTemple.cpp  Makefile.am  Setup.cpp  Setup.h
src/scripts/src/MiscScripts/: Creatures.cpp  DarkmoonFaireObjects.cpp  GameObjects.cpp  Makefile.am  QuelDanasPortal.cpp  RandomScripts.cpp
src/scripts/src/SpellHandlers/: DruidSpells.cpp  HunterSpells.cpp  ItemSpells_1.cpp  MageSpells.cpp  Makefile.am  OldSpellCPPStuff.cpp  PriestSpells.cpp  QIspells.cpp  Raid_BlackTemple.cpp  RogueSpells.cpp  Setup.cpp  Setup.h  ShamanSpells.cpp  WarlockSpells.cpp  WarriorSpells.cpp
src/scripts/src/WorldPvPScripts/: Makefile.am
win/: wowemuVC90.sln
win/VC90/: wowemu-logonserver.vcproj  wowemu-realmserver.vcproj  wowemu-shared.vcproj  wowemu-voicechat.vcproj  wowemu-world.vcproj
(+181 files in other folders)
